add statement to demo

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e274fdcc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -19,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "223ac6c8",
    "metadata": {},
    "outputs": [],
@@ -33,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1cf7b034",
    "metadata": {},
    "outputs": [],
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f82592f6",
    "metadata": {},
    "outputs": [],
@@ -56,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a0029fe2",
    "metadata": {},
    "outputs": [],
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7e8a274b",
    "metadata": {},
    "outputs": [
@@ -93,7 +97,7 @@
        " 'video_url': 'https://www.youtube.com/watch?v=0O4bxhpFX9o'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f519848c",
    "metadata": {
     "scrolled": true
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 8,
    "id": "d16fff61",
    "metadata": {},
    "outputs": [],
@@ -125,7 +129,7 @@
     "all_frames = []\n",
     "all_caps = []\n",
     "for vid in all_vid_names:\n",
-    "    vid2cap[vid] = {'frames':[], 'cap':[]}\n",
+    "    vid2cap[vid] = {'frames': [], 'cap': []}\n",
     "    if vid == '.DS_Store':\n",
     "        continue\n",
     "    vid_feat = pd.read_csv(demo_dir + '/' + vid + '/0001/resnet_34_feat_mscoco.csv', header=None)\n",
@@ -153,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 30,
    "id": "06eddc50",
    "metadata": {},
    "outputs": [],
@@ -165,21 +169,22 @@
     "        # https://towardsdatascience.com/image-captions-with-attention-in-tensorflow-step-by-step-927dad3569fa\n",
     "\n",
     "        # Convert the caption to lowercase, and then remove all special characters from it\n",
-    "        caption_nopunct = re.sub(r\"[^a-zA-Z0-9]+\", ' ', caption.lower())\n",
-    "      \n",
+    "        # caption_nopunct = re.sub(r\"[^a-zA-Z0-9]+\", ' ', caption.lower())\n",
+    "        # TODO: this step can be handled with keras tokenizer?\n",
+    "\n",
     "        # Split the caption into separate words, and collect all words which are more than \n",
     "        # one character and which contain only alphabets (ie. discard words with mixed alpha-numerics)\n",
     "        clean_words = []\n",
-    "        for word in caption_nopunct.split():\n",
+    "        for word in caption.split():\n",
     "            if word.isalpha():\n",
     "                clean_words.append(word)\n",
     "            elif word.isnumeric():\n",
     "                clean_words.append('<num>')\n",
-    "#         clean_words = [word for word in caption_nopunct.split() if ((len(word) > 1) and (word.isalpha()))]\n",
-    "      \n",
+    "        #         clean_words = [word for word in caption_nopunct.split() if ((len(word) > 1) and (word.isalpha()))]\n",
+    "\n",
     "        # Join those words into a string\n",
     "        caption_new = ['<start>'] + clean_words + ['<end>']\n",
-    "      \n",
+    "\n",
     "        # Replace the old caption in the captions list with this new cleaned caption\n",
     "        caps_ret.append(caption_new)\n",
     "    return caps_ret"
@@ -187,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 31,
    "id": "1078a5bb",
    "metadata": {},
    "outputs": [],
@@ -197,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 32,
    "id": "0e9bb094",
    "metadata": {},
    "outputs": [],
@@ -207,17 +212,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 33,
    "id": "03badee3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. <start>: 3650\n",
+      "2. <end>: 3650\n",
+      "3. the: 3140\n",
+      "4. and: 2438\n",
+      "5. on: 2204\n",
+      "6. bread: 1405\n",
+      "7. bacon: 1381\n",
+      "8. of: 1290\n",
+      "9. a: 1094\n",
+      "10. slices: 1093\n",
+      "11. top: 1037\n",
+      "12. place: 783\n",
+      "13. pan: 624\n",
+      "14. lettuce: 607\n",
+      "15. spread: 586\n",
+      "16. with: 571\n",
+      "17. some: 561\n",
+      "18. in: 514\n",
+      "19. tomato: 509\n",
+      "20. add: 469\n",
+      "21. slice: 426\n",
+      "22. mayonnaise: 388\n",
+      "23. put: 387\n",
+      "24. into: 366\n",
+      "25. to: 308\n",
+      "26. toast: 305\n",
+      "27. fry: 291\n",
+      "28. tomatoes: 288\n",
+      "29. other: 285\n",
+      "30. pieces: 270\n",
+      "31. cut: 251\n",
+      "32. cheese: 238\n",
+      "33. it: 236\n",
+      "34. sandwich: 217\n",
+      "35. take: 216\n",
+      "36. lemon: 215\n",
+      "37. oil: 209\n",
+      "38. cook: 203\n",
+      "39. side: 202\n",
+      "40. pepper: 201\n",
+      "41. salt: 195\n",
+      "42. half: 189\n",
+      "43. one: 187\n",
+      "44. cover: 178\n",
+      "45. mustard: 178\n",
+      "46. onto: 173\n",
+      "47. them: 171\n",
+      "48. chicken: 170\n",
+      "49. juice: 164\n",
+      "50. avocado: 163\n"
+     ]
+    }
+   ],
    "source": [
-    "tokenizer.fit_on_texts(copy.deepcopy(clean_caps))"
+    "tokenizer.fit_on_texts(copy.deepcopy(clean_caps))\n",
+    "# print out the most frequent 50 words\n",
+    "top_50 = sorted(tokenizer.word_counts.items(), key=lambda x: x[1], reverse=True)[:50]\n",
+    "for i, (word, count) in enumerate(top_50):\n",
+    "    print(f'{i + 1}. {word}: {count}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 34,
    "id": "ae9d6577",
    "metadata": {},
    "outputs": [],
@@ -236,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 35,
    "id": "691b0f5e",
    "metadata": {},
    "outputs": [],
@@ -246,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 36,
    "id": "d5fbc0bd",
    "metadata": {},
    "outputs": [],
@@ -258,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 37,
    "id": "cfa9c1f3",
    "metadata": {},
    "outputs": [],
@@ -269,12 +335,13 @@
     "        caption += (pad_len - len(caption)) * ['<pad>']\n",
     "    return pad_cap\n",
     "\n",
+    "\n",
     "padded_caps = pad_captions(masked_caps, max_seq_len)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 38,
    "id": "bca3eed2",
    "metadata": {},
    "outputs": [],
@@ -288,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 39,
    "id": "7298252d",
    "metadata": {},
    "outputs": [],
